--- a/tests/05_sc_workflow_event_kafka.yml
+++ b/tests/05_sc_workflow_event_kafka.yml
@@ -23,11 +23,13 @@ testcases:
 - name: check if consumer kafka is started
   steps:
   - script: sleep 15 && {{.cdsctl}} -f {{.cdsctl.config}} admin services status --type=hooks|grep 'Hook Kafka Consumers' | grep OK
-    timeout: 30
+    timeout: 100
 
 - name: run workflow by sending a kafka event
   steps:
   - script: kafkacat -b localhost:9092 -t test.hook -T -P -l ./fixtures/ITSCWRKFLW18/input-kafka.json
+    retry: 10
+    delay: 10
     timeout: 30
 
 - name: check event in topic test.eventsproject
