--- a/tests/05_sc_workflow_event_kafka.yml
+++ b/tests/05_sc_workflow_event_kafka.yml
@@ -48,19 +48,15 @@ testcases:
     assertions:
     - result.code ShouldEqual 0
     - "result.systemoutjson.type_event ShouldContainSubstring sdk.EventRunWorkflowJob"
-    retry: 10
-    delay: 10
     timeout: 100
 
-- name: check event in topic test.jobs
-  steps:
-  - script: kafkacat -b localhost:9092 -t test.jobs -C -o -1 -c 1
-    assertions:
-    - result.code ShouldEqual 0
-    - "result.systemoutjson.id ShouldNotBeEmpty"
-    retry: 10
-    delay: 10
-    timeout: 100
+#- name: check event in topic test.jobs
+#  steps:
+#  - script: kafkacat -b localhost:9092 -t test.jobs -C -o -1 -c 1
+#    assertions:
+#    - result.code ShouldEqual 0
+#    - "result.systemoutjson.id ShouldNotBeEmpty"
+#    timeout: 100
 
 - name: check workflow
   steps:
