--- a/tests/05_sc_workflow_event_kafka.yml
+++ b/tests/05_sc_workflow_event_kafka.yml
@@ -23,31 +23,41 @@ testcases:
 - name: check if consumer kafka is started
   steps:
   - script: sleep 15 && {{.cdsctl}} -f {{.cdsctl.config}} admin services status --type=hooks|grep 'Hook Kafka Consumers' | grep OK
-    timeout: 30
+    timeout: 100
 
 - name: run workflow by sending a kafka event
   steps:
   - script: kafkacat -b localhost:9092 -t test.hook -T -P -l ./fixtures/ITSCWRKFLW18/input-kafka.json
-    timeout: 30
+    retry: 10
+    delay: 10
 
 - name: check event in topic test.eventsproject
   steps:
   - script: kafkacat -b localhost:9092 -t test.eventsproject -C -o -1 -c 1
+    info: "kafka message is: {{.result.systemout}}"
     assertions:
     - result.code ShouldEqual 0
-    - "result.systemoutjson.type_event ShouldContainSubstring sdk.EventRunWorkflowJob"
+    - "result.systemoutjson.id ShouldNotBeEmpty"
     retry: 10
     delay: 10
-    timeout: 100
+    timeout: 300
 
 - name: check event in topic test.eventspublic
   steps:
   - script: kafkacat -b localhost:9092 -t test.eventspublic -C -o -1 -c 1
+    info: "kafka message is: {{.result.systemout}}"
     assertions:
     - result.code ShouldEqual 0
-    - "result.systemoutjson.type_event ShouldContainSubstring sdk.EventRunWorkflowJob"
-    retry: 10
-    delay: 10
+    - "result.systemoutjson.type_event ShouldNotBeEmpty"
+    timeout: 100
+
+- name: check event in topic test.jobs
+  steps:
+  - script: kafkacat -b localhost:9092 -t test.jobs -C -o -1 -c 1
+    info: "kafka message is: {{.result.systemout}}"
+    assertions:
+    - result.code ShouldEqual 0
+    - "result.systemoutjson.id ShouldNotBeEmpty"
     timeout: 100
 
 - name: check workflow
