chore: upgrade to ng12

--- a/ui/package.json
+++ b/ui/package.json
@@ -15,8 +15,8 @@
     "test": "ng test --watch false --code-coverage",
     "e2e": "testcafe chromium:headless ./e2e/tests/* -S -s screenshots",
     "doc": "./node_modules/.bin/compodoc -p tsconfig.json -s",
-    "build:prod": "ng build --prod",
-    "build:stats": "ng build --prod --stats-json",
+    "build:prod": "ng build --configuration production",
+    "build:stats": "ng build --configuration production --stats-json",
     "build:analyse": "webpack-bundle-analyzer dist/stats.json",
     "sentry:release": "sentry-cli releases -o ${SENTRY_ORG} -p ${SENTRY_PROJECT} new ${CDS_VERSION}",
     "sentry:sourcemaps": "sentry-cli releases -o ${SENTRY_ORG} -p ${SENTRY_PROJECT} files ${CDS_VERSION} upload-sourcemaps --url-prefix=${SENTRY_CDS_PREFIX_URL}"
@@ -26,15 +26,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "11.2.14",
-    "@angular/cdk": "11.2.13",
-    "@angular/common": "11.2.14",
-    "@angular/compiler": "11.2.14",
-    "@angular/core": "11.2.14",
-    "@angular/forms": "11.2.14",
-    "@angular/platform-browser": "11.2.14",
-    "@angular/platform-browser-dynamic": "11.2.14",
-    "@angular/router": "11.2.14",
+    "@angular/animations": "12.2.16",
+    "@angular/cdk": "12.2.13",
+    "@angular/common": "12.2.16",
+    "@angular/compiler": "12.2.16",
+    "@angular/core": "12.2.16",
+    "@angular/forms": "12.2.16",
+    "@angular/platform-browser": "12.2.16",
+    "@angular/platform-browser-dynamic": "12.2.16",
+    "@angular/router": "12.2.16",
     "@fontsource/lato": "4.5.0",
     "@icholy/duration": "5.0.0",
     "@ngui/auto-complete": "3.0.0",
@@ -91,19 +91,19 @@
     "string-format-obj": "1.1.1",
     "ts-helpers": "1.1.2",
     "tslib": "2.0.0",
-    "zone.js": "0.11.3",
+    "zone.js": "0.11.4",
     "zxcvbn": "4.4.2"
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "11.0.0",
-    "@angular-devkit/build-angular": "0.1102.13",
+    "@angular-devkit/build-angular": "12.2.15",
     "@angular-eslint/builder": "0.8.0-beta.3",
     "@angular-eslint/eslint-plugin": "0.8.0-beta.3",
     "@angular-eslint/eslint-plugin-template": "0.8.0-beta.3",
     "@angular-eslint/schematics": "0.8.0-beta.3",
     "@angular-eslint/template-parser": "0.8.0-beta.3",
-    "@angular/cli": "11.2.13",
-    "@angular/compiler-cli": "11.2.14",
+    "@angular/cli": "12.2.15",
+    "@angular/compiler-cli": "12.2.16",
     "@commitlint/cli": "13.0.0",
     "@commitlint/config-conventional": "13.0.0",
     "@compodoc/compodoc": "1.1.11",
@@ -116,8 +116,8 @@
     "@types/lodash-es": "4.17.3",
     "@types/node": "12.11.1",
     "@types/sanitize-html": "2.3.1",
-    "@typescript-eslint/eslint-plugin": "4.3.0",
-    "@typescript-eslint/parser": "4.3.0",
+    "@typescript-eslint/eslint-plugin": "5.10.2",
+    "@typescript-eslint/parser": "5.10.2",
     "codelyzer": "6.0.0",
     "copy-webpack-plugin": "9.0.0",
     "eslint": "7.6.0",
@@ -136,7 +136,7 @@
     "lint-staged": "^12.0.2",
     "ts-node": "8.3.0",
     "tslint": "6.1.0",
-    "typescript": "4.0.2",
+    "typescript": "4.3.5",
     "webdriver-manager": "12.1.7",
     "webpack-bundle-analyzer": "3.3.2",
     "wrench-sui": "0.0.3"
