--- a/ui/package.json
+++ b/ui/package.json
@@ -19,26 +19,27 @@
     "build:stats": "ng build --configuration production --stats-json",
     "build:analyse": "webpack-bundle-analyzer dist/stats.json",
     "sentry:release": "sentry-cli releases -o ${SENTRY_ORG} -p ${SENTRY_PROJECT} new ${CDS_VERSION}",
-    "sentry:sourcemaps": "sentry-cli releases -o ${SENTRY_ORG} -p ${SENTRY_PROJECT} files ${CDS_VERSION} upload-sourcemaps --url-prefix=${SENTRY_CDS_PREFIX_URL}"
+    "sentry:sourcemaps": "sentry-cli releases -o ${SENTRY_ORG} -p ${SENTRY_PROJECT} files ${CDS_VERSION} upload-sourcemaps --url-prefix=${SENTRY_CDS_PREFIX_URL}",
+    "lint": "ng lint"
   },
   "lint-staged": {
-    "*.{js,scss,ts}": "tslint"
+    "*.{js,ts}": "eslint"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "12.2.10",
-    "@angular/cdk": "12.2.10",
-    "@angular/common": "12.2.10",
-    "@angular/compiler": "12.2.10",
-    "@angular/core": "12.2.10",
-    "@angular/forms": "12.2.10",
-    "@angular/platform-browser": "12.2.10",
-    "@angular/platform-browser-dynamic": "12.2.10",
-    "@angular/router": "12.2.10",
+    "@angular/animations": "13.2.0",
+    "@angular/cdk": "13.2.0",
+    "@angular/common": "13.2.0",
+    "@angular/compiler": "13.2.0",
+    "@angular/core": "13.2.0",
+    "@angular/forms": "13.2.0",
+    "@angular/platform-browser": "13.2.0",
+    "@angular/platform-browser-dynamic": "13.2.0",
+    "@angular/router": "13.2.0",
     "@fontsource/lato": "4.5.0",
     "@icholy/duration": "5.0.0",
     "@ngui/auto-complete": "3.0.0",
-    "@ngx-translate/core": "12.1.2",
+    "@ngx-translate/core": "14.0.0",
     "@ngx-translate/http-loader": "4.0.0",
     "@ngxs/devtools-plugin": "3.7.0",
     "@ngxs/logger-plugin": "3.7.0",
@@ -87,23 +88,24 @@
     "rxjs": "6.5.4",
     "rxjs-compat": "6.3.3",
     "sanitize-html": "2.3.2",
-    "spinkit": "1.2.5",
+    "spinkit": "2.0.1",
     "string-format-obj": "1.1.1",
     "ts-helpers": "1.1.2",
     "tslib": "2.0.0",
+    "url": "0.11.0",
     "zone.js": "0.11.4",
     "zxcvbn": "4.4.2"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "12.1.3",
-    "@angular-devkit/build-angular": "12.2.10",
-    "@angular-eslint/builder": "0.8.0-beta.3",
-    "@angular-eslint/eslint-plugin": "0.8.0-beta.3",
-    "@angular-eslint/eslint-plugin-template": "0.8.0-beta.3",
-    "@angular-eslint/schematics": "0.8.0-beta.3",
-    "@angular-eslint/template-parser": "0.8.0-beta.3",
-    "@angular/cli": "12.2.10",
-    "@angular/compiler-cli": "12.2.10",
+    "@angular-builders/custom-webpack": "13.1.0",
+    "@angular-devkit/build-angular": "13.2.1",
+    "@angular-eslint/builder": "13.0.1",
+    "@angular-eslint/eslint-plugin": "13.0.1",
+    "@angular-eslint/eslint-plugin-template": "13.0.1",
+    "@angular-eslint/schematics": "13.0.1",
+    "@angular-eslint/template-parser": "13.0.1",
+    "@angular/cli": "13.2.1",
+    "@angular/compiler-cli": "13.2.0",
     "@commitlint/cli": "13.0.0",
     "@commitlint/config-conventional": "13.0.0",
     "@compodoc/compodoc": "1.1.11",
@@ -116,14 +118,15 @@
     "@types/lodash-es": "4.17.3",
     "@types/node": "12.11.1",
     "@types/sanitize-html": "2.3.1",
-    "@typescript-eslint/eslint-plugin": "5.10.2",
-    "@typescript-eslint/parser": "5.10.2",
+    "@typescript-eslint/eslint-plugin": "5.3.0",
+    "@typescript-eslint/parser": "5.3.0",
+    "@typescript-eslint/typescript-estree": "5.10.2",
     "codelyzer": "6.0.0",
     "copy-webpack-plugin": "9.0.0",
-    "eslint": "7.6.0",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jsdoc": "30.7.6",
-    "eslint-plugin-prefer-arrow": "1.2.2",
+    "eslint": "^8.2.0",
+    "eslint-plugin-import": "2.25.4",
+    "eslint-plugin-jsdoc": "37.7.1",
+    "eslint-plugin-prefer-arrow": "1.2.3",
     "husky": "3.0.5",
     "jasmine-core": "3.6.0",
     "jasmine-spec-reporter": "5.0.0",
@@ -135,8 +138,8 @@
     "karma-junit-reporter": "1.2.0",
     "lint-staged": "^12.0.2",
     "ts-node": "8.3.0",
-    "tslint": "6.1.0",
-    "typescript": "4.3.5",
+    "typescript": "4.5.2",
+    "url": "^0.11.0",
     "webdriver-manager": "12.1.7",
     "webpack-bundle-analyzer": "3.3.2",
     "wrench-sui": "0.0.3"
