feat(contrib): support for alternative in plugin-arsenal
Signed-off-by: Alexandre Jin <1076513+Inozuma@users.noreply.github.com>

--- a/contrib/integrations/arsenal/arsenal.yml
+++ b/contrib/integrations/arsenal/arsenal.yml
@@ -7,6 +7,9 @@ additional_default_config:
   version:
     type: string
     value: "{{.cds.version}}"
+  alternative.config:
+    type: text
+    value: ""
   deployment.token:
     type: password
   retry.max:
